[gd_scene load_steps=5 format=3 uid="uid://em2ubx0y2ejl"]

[ext_resource type="Script" path="res://Scripts/City.gd" id="1_85jps"]
[ext_resource type="Script" path="res://Scripts/CityArea.gd" id="2_tdwkd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tdwkd"]

[sub_resource type="BoxMesh" id="BoxMesh_12b87"]

[node name="City" type="Node3D"]
script = ExtResource("1_85jps")

[node name="CityArea" type="Area3D" parent="."]
script = ExtResource("2_tdwkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CityArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.218029, 0)
shape = SubResource("BoxShape3D_tdwkd")

[node name="CityMesh" type="MeshInstance3D" parent="CityArea"]
transform = Transform3D(0.958353, 0, 0, 0, 0.271578, 0, 0, 0, 0.969367, 0, 0.316887, 0)
mesh = SubResource("BoxMesh_12b87")
skeleton = NodePath("../..")

[node name="Label3D" type="Label3D" parent="CityArea"]
transform = Transform3D(1, 0, 0, 0, 0.0721589, 0.997393, 0, -0.997393, 0.0721589, 0, 1.27659, 0)
text = "5"
font_size = 150

[connection signal="body_entered" from="CityArea" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="CityArea" to="." method="_on_area_3d_body_exited"]
[connection signal="input_event" from="CityArea" to="CityArea" method="_on_input_event"]
[connection signal="mouse_entered" from="CityArea" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="CityArea" to="." method="_on_area_3d_mouse_exited"]
